[package]
name = "luna"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
ignore = "0.4.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
vulcan = { git = "https://github.com/insprac/vulcan.git", version = "0.1.3" }
